--- a/css/article.css
+++ b/css/article.css
@@ -835,4 +835,13 @@ button#submit-comment.active-button:hover {
   border-radius: 5px;
   cursor: pointer;
 }
+.preview-banner {
+  background: #f8e7b6;
+  padding: 10px 15px;
+  border-left: 5px solid #f1a300;
+  margin-bottom: 1rem;
+  font-weight: bold;
+  color: #4a3900;
+  border-radius: 4px;
+}
 
