--- a/css/article.css
+++ b/css/article.css
@@ -89,6 +89,24 @@
   border-radius: 8px;
   margin: 1.5rem 0;
 }
+.align-left {
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.align-right {
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+}
+
 #article-content ul {
   padding-left: 1.5rem;
   margin: 1rem 0;
