--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,18 @@
   color: #aaa;
   padding: 0.5rem;
 }
+.notif-badge {
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  background-color: red;
+  color: white;
+  font-size: 0.65rem;
+  font-weight: bold;
+  padding: 2px 5px;
+  border-radius: 50%;
+  display: none;
+}
 
  /* === Main Content === */
  main {
